# self

./: CMakeLists.txt  Makefile  README.md  arg.c  arg.h  auth.c  auth.h  baicell_net.c  baicell_net.h  bt_model_action.c  bt_model_action.h  cache_file.c  cache_file.h  cli.c  cli_action.c  cli_action.h  cmdline.ggo  config.c  config.h  config.h.in  control_pa  devic_list.c  devic_list.h  epoll_active.c  epoll_active.h  example_mqttc.cfg  fiberhome_lte.c  fiberhome_lte.h  gpio_serial.c  gpio_serial.h  hash_list_active.c  hash_list_active.h  http.c  http.h  imsi_list_acton.c  imsi_list_acton.h  json_sample.c  list.h  lua_action.c  lua_action.h  (+23 more)
action/: gpio_ctrl.c  http.c  mosquit_sub.c  my_log.c  serialtest_ln.c  serialtest_sh.c  timer.c
cmake/: Gengetopt.cmake
dev_auth/usr/lib/lua/luci/controller/auth/: devauth.lua
dev_auth/usr/lib/lua/luci/model/cbi/auth/: devauth.lua
include/: gpio_ctrl.h  http.h  mosquit_sub.h  my_log.h  serialtest_ln.h  serialtest_sh.h  timer.h
openwrt_install/base_master/: Config.in  Makefile
root/etc/: base_master.cfg.default
root/etc/config/: base_master
root/usr/lib/lua/: get_status.lua  json.lua  set_status.lua
root/usr/sbin/: set_base_master  set_one_masterconfig
root/usr/sbin/innobank/crond.minly/: check_base_master  check_server_connect
root/usr/sbin/innobank/crond.tendayly/: scan
